<resources>
    <string name="app_name">TallerProgramacion</string>
    <string name="domicilio">Enviar a Capital Federal 1704 </string>
    <string name="descripcionProducto">Zapatillas Run Blue adidas Sport 78 Tienda Oficial</string>
    <string name="cantidadVendidos">6 vendidos</string>
    <string name="cantidadFotos">6 fotos</string>
    <string name="vendedor">por Sport 78</string>
    <string name="precioViejo">$4.599</string>
    <string name="precioNuevo">$3.889</string>
    <string name="descuento">15% OFF</string>
    <string name="comprar">Comprar</string>
    <string name="agregar">Agregar al carrito</string>
    <string name="cuotas">Paga en hasta 12 cuotas</string>
    <string name="cuandoLlega">Llega entre el 4 y el 8 de Octubre</string>
    <string name="beneficio">Beneficio Mecardo Puntos</string>
    <string name="envioGratis">Envio Gratis</string>
    <string name="error">Error de conexión. Por favor intente mas tarde</string>
    <string name="sinResultados">No encontramos publicaciones</string>
    <string name="revisar">Revisa que la palabra esté bien escrita</string>
</resources>
