<?xml version="1.0" encoding="utf-8"?>
<ScrollView

        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ProductoActivity">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@color/colorFondo"
                >


            <LinearLayout
                    android:id="@+id/barraPrincipal"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@color/colorPrimary"
                    android:weightSum="100"
                    android:orientation="horizontal"
                    >

                <ImageView
                        android:id="@+id/map"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/mapmarker"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="5"
                        android:layout_gravity="center_vertical"
                        />

                <TextView
                        android:id="@+id/domicilio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/domicilio"
                        android:layout_toRightOf="@+id/map"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="30dp"
                        android:layout_weight="90"
                        android:layout_gravity="center_vertical"

                        />

                <ImageView
                        android:id="@+id/flecha"
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/chevronright"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="20dp"
                        android:layout_weight="5"
                        android:layout_gravity="center_vertical"

                        />

            </LinearLayout>
            <RelativeLayout
                    android:id="@+id/errorProducto"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="100dp"
                    android:visibility="invisible"
                    >
                <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:text="@string/error"
                        android:layout_marginRight="10dp"
                        android:layout_marginLeft="10dp"
                        />

            </RelativeLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >
                <ProgressBar
                        android:id="@+id/progressBar"
                        style="?android:attr/progressBarStyleLarge"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="200dp"
                        android:layout_below="@id/barraPrincipal"
                        />


            </LinearLayout>



            <LinearLayout
                android:id="@+id/layoutContenido"
                android:visibility="invisible"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                    android:layout_below="@+id/barraPrincipal"
                >

                <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="209dp">

                    <ImageView
                            android:id="@+id/imagenProducto"
                            android:layout_width="match_parent"
                            android:layout_height="200dp"
                            android:background="#FFFFFF">

                    </ImageView>

                    <TextView
                            android:id="@+id/cantidadFotos"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignBottom="@+id/imagenProducto"
                            android:layout_marginLeft="20dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/colorFondoOscuro"
                            android:padding="5dp"
                            android:textColor="#FFFFFF" />

                </RelativeLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp">
                <TextView
                        android:id="@+id/cantidadVendidos"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="15dp"
                        />
                <TextView
                        android:id="@+id/nombreProducto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif"
                        android:textSize="20dp"
                        />
                <TextView
                        android:id="@+id/nombreVendedor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="15dp"/>

                <TextView
                        android:id="@+id/precioViejo"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-light"
                        android:textSize="15dp"/>
                <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        >
                    <TextView
                            android:id="@+id/precioConDescuento"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:textSize="35dp"/>
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/descuento"
                            android:fontFamily="sans-serif"
                            android:textSize="15dp"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="5dp"
                            android:textColor="@color/colorDescuento"
                            />
                </LinearLayout>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_marginBottom="20dp">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:weightSum="100">

                    <ImageView
                            android:id="@+id/tarjeta"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_weight="5"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            />
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:layout_weight="85"
                            android:paddingBottom="15dp">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="80"
                                >
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/cuotas"
                                    />

                        </LinearLayout>
                        <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_weight="5"
                                android:src="@drawable/chevronright"
                                android:layout_marginRight="-8dp"
                                />
                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:weightSum="100">
                    <!--                <ImageView-->
                    <!--                        android:layout_width="18dp"-->
                    <!--                        android:layout_height="18dp"-->
                    <!--                        android:src="@drawable/truck"-->
                    <!--                        android:layout_weight="5"-->
                    <!--                        android:layout_centerVertical="true"-->
                    <!--                        android:layout_alignParentRight="true"-->
                    <!--                        android:layout_marginRight="20dp"-->
                    <!--                        android:layout_marginTop="5dp"/>-->
                    <ImageView
                            android:id="@+id/camion"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_weight="5"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            />
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:weightSum="80"
                            android:layout_weight="80"
                            android:paddingBottom="15dp">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="80"
                                >
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/envioGratis"
                                    android:textColor="@color/colorDescuento"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="@string/cuandoLlega"
                                    />
                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:text="@string/beneficio"

                                    />
                        </LinearLayout>
                        <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_weight="5"
                                android:src="@drawable/chevronright"
                                android:layout_marginRight="-5dp"
                                />
                    </LinearLayout>


                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:weightSum="100">
                    <ImageView
                            android:id="@+id/devolucion"
                            android:layout_width="18dp"
                            android:layout_height="18dp"
                            android:layout_weight="5"
                            android:layout_centerVertical="true"
                            android:layout_alignParentRight="true"
                            android:layout_marginRight="20dp"
                            android:layout_marginTop="5dp"
                            />
                    <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@drawable/border"
                            android:weightSum="80"
                            android:layout_weight="80"
                            android:paddingBottom="15dp">
                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:layout_weight="90"
                                >
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="Devolución Gratis"
                                    android:textColor="@color/colorDescuento"/>
                            <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:text="Tenés 30 días desde que lo recibís"
                                    />
                        </LinearLayout>
                        <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:src="@drawable/chevronright"
                                android:layout_weight="5"
                                android:layout_centerVertical="true"
                                android:layout_alignParentRight="true"
                                android:layout_marginRight="10dp"
                                />
                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="100"
                    android:background="@color/blanco"
                    android:layout_margin="10dp"
                    android:padding="10dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"


                        android:text="Cantidad: 1"

                        android:layout_weight="90"/>
                <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:src="@drawable/chevronright"
                        android:layout_weight="5"
                        android:layout_centerVertical="true"
                        android:layout_alignParentRight="true"
                        />

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/comprar"
                        android:background="@color/azul"
                        android:textColor="@color/blanco"
                        android:layout_marginBottom="10dp"/>
                <Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/agregar"
                        android:background="@color/blanco"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/azul"
                        />
            </LinearLayout>
        </LinearLayout>


        </RelativeLayout>



    </RelativeLayout>



</ScrollView>